--- a/rps-style.css
+++ b/rps-style.css
@@ -76,8 +76,9 @@ h2{
 #score {
     display: flex;
     justify-content: center;
-    padding: 50px 0 40px 0;
+    padding: 10px 0 40px 0;
     gap: 430px;
+
 }
 
 #player-text, #your-score, #computer-text, 
@@ -86,12 +87,56 @@ h2{
     font-size: 20px;
 }
 
+/* ==PLAY AGAIN BOX ==*/
+.play-again-box-inactive{
+    transform: translate(0, 0) scale(0);
+}
+
+.play-again-inactive {
+    visibility: hidden;
+    transform: translate(0, 0) scale(0);
+}
+
+.play-again-box-active {
+    display: flex;
+    justify-content:center;
+    align-items: center; 
+    /* margin: auto; */
+    position: relative;
+    left: 550px;
+    bottom: 140px;
+    z-index: 1;
+    width: 250px;
+    height: 120px;
+    border-radius: 12px;
+    box-shadow: -2px -1px 10px 6px rgb(197, 195, 195);
+    background-color: rgb(238, 236, 236);
+    transform: translate(0, 0) scale(1);
+    transition: 500ms ease-in-out;
+}
+
+
+.play-again-active {
+    visibility: visible;
+    width: 120px;
+    height: 50px;
+    background-color:  rgba(75, 129, 199, 0.904);
+    border: none;
+    border-radius: 4px;
+    padding: 6px;
+    cursor: pointer;
+    font-size: 15px;
+    margin: 0 10px 10px;
+    transform: translate(0, 0) scale(1);
+    transition: 500ms ease-in-out;
+}
+
 
 /* Results images*/
 #results-image-box{
     display: flex;
     justify-content: center;
-    gap: 260px;
+    gap: 280px;
     margin-bottom: -190px;
     /*position: relative;
     z-index: -1;*/
@@ -103,43 +148,44 @@ h2{
     width: 250px;
 } 
 
-#rock-box, #paper-box {
+#player-rock-box, #player-paper-box,
+#computer-rock-box, #computer-paper-box {
     margin-right: -220px;
 }
 
-#rock-box{
+#player-rock-box, 
+#computer-rock-box{
     position: relative;
     bottom: -10px;
 }
 
-#scissors-box{
+#player-paper-box,
+#computer-paper-box{
+    position: relative;
+    bottom: 30px;
+}
+
+
+#player-scissors-box,
+#computer-scissors-box {
     position: relative;
     bottom: -18px;
 }
 
-#paper-image{
-    position: relative;
-    bottom: 25px;
-}
 
 /* = WHITE BAND TO HIDE THE CHOSE OPTION =*/
 #hide-banner {
     background-color: white;
-    height: 160px;
+    height: 100px;
     position: relative;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 
 
 
 /* BUTTONS */
-button {
-    cursor: pointer;
-}
-
-
 #btns-container {
-    padding: 30px 0 40px 0;
+    padding: 0 0 40px 0;
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -148,4 +194,22 @@ button {
 .each-button-box{
     display: flex;
     justify-content: center;
+}
+
+
+/* */
+.picked-option-one{
+    top: -70px;
+}
+
+.picked-option-two{
+    top: -100px;
+}
+
+/**/
+#copyright{
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    color: white;
 }
